updated spring boot version to 3.3.6. snyk reported security vulnerabilities in spring boot versions