@@ -4,11 +4,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.Optional;
 
-import com.eshoponcontainers.catalogapi.entities.CatalogItem;
-import com.eshoponcontainers.catalogapi.repositories.CatalogItemRepository;
-
-import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -17,6 +12,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
+
+import com.eshoponcontainers.catalogapi.entities.CatalogItem;
+import com.eshoponcontainers.catalogapi.repositories.CatalogItemRepository;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -41,8 +39,8 @@ public class PicController {
             ResponseEntity<byte[]> responseEntity;
             final HttpHeaders headers = new HttpHeaders();
 
-            byte[] media = IOUtils.toByteArray(picStream);
-            String extension = FilenameUtils.getExtension(pictureFileName);
+            byte[] media = picStream.readAllBytes();
+            String extension = pictureFileName.substring(pictureFileName.lastIndexOf('.') + 1);
             MediaType mediaType = getMediaTypeByExtension(extension);
             headers.setContentType(mediaType);
             responseEntity = new ResponseEntity<>(media, headers, HttpStatus.OK);
